style.less
/* ... */
.post-navigation,
#image-navigation{
	margin-top: -20px;
	margin-bottom: 40px;
	.clearfix();

	a {
		text-decoration: none;
		padding: 6px 10px;
		.bordered(#d2d2d2, #c3c3c3, #9f9f9f, #c3c3c3);
		.gradient(#FFFFFF, #dfdfdf, #FFFFFF);
		.rounded(3px);
		font-size: 11px;
		font-weight: bold;
		color: #646464;
		display: inline-block;

		.meta-nav {
			display: inline-block;
		}

		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125)");

		&:hover {
			.bordered(#dadada, #cfcfcf, #a8a8a8, #cfcfcf);
			.gradient(#FFFFFF, #ebebeb, #FFFFFF);
		}
	}

	.nav-previous {
		.meta-nav {
			margin-right: 7px;
		}
	}

	.nav-next {
		.meta-nav {
			margin-left: 7px;
		}
	}
}

.single-nav-wrapper {
	overflow: hidden;
}

/* Reset the navigation */
#image-navigation {
	margin-top: 0px;
	margin-bottom: 20px;
}

/* =Entry Content
----------------------------------------------- */

/* Styles for actual content */

.entry-header {
	.clearfix();
}

.entry-content{
	.clearfix();

	line-height: 1.6em;
	color: #666666;

	a{
		color: #248cc8;

		.transition(0.2s);

		&:hover {
			color: #f47e3c;
		}
	}

	p,
	& > ul,
	& > li,
	& > dl,
	pre, code, blockquote{
		margin: 1em 0;
	}

	& > *:last-child{
		margin-bottom: 0;
	}

	& > *:first-child{
		margin-top: 0;
	}

	blockquote{
		font-style: italic;
		margin-left: 1em;
		padding-left: 1em;
		border-left: 1px solid #AAAAAA;

		cite{
			font-weight: bold;
		}

		cite a{

		}
	}

	pre, code{
		display: block;
		background: white;
		font-family: "Courier New", Courier, mono;
		border: 1px solid #D9D9D9;
		padding: 10px;

		box-shadow: 0 1px 2px rgba(0,0,0,0.09);

		overflow-x: auto;

		p:first-child {
			margin-top: 0;
		}
	}

	code{
		font-family: "Courier New", Courier, mono;
	}

	sup,
	sub{
		height: 0;
		line-height: 1;
		vertical-align: baseline;
		position: relative;
	}

	sup {
		bottom: 1ex;
	}

	sub {
		top: .5ex;
	}

	.gallery-caption{

	}

	.gallery{
		margin: 15px 0 25px 0;

		.gallery-item{
			margin-bottom: 0;
		}

		.gallery-icon{
			line-height: 0;
			margin-bottom: 0;
		}

		img{
			border: none !important;
		}

		.gallery-caption{
			margin: 10px;
			padding-left: 0;
		}
	}

	table{
		width: 100%;
	}

	img{
		max-width: 100%;
		height: auto;
		.rounded(3px);
		.box-shadow(~"0 1px 2px rgba(0,0,0,0.175)");
	}

	/* WordPress Images */

	.wp-caption{
		max-width: 100%;
		margin: 5px 0 30px 0;
		border: 1px solid #E0E0E0;
		padding: 8px;
		box-shadow: 0 1px 2px rgba(0,0,0,0.09);

		.box-sizing(border-box);

		text-align: center;
	}

	.wp-caption:first-child{
		margin-top: 25px;
	}

	.wp-caption p.wp-caption-text{
		margin: 0;
	}

	.alignleft {
		/* This is also styled on a global level */
		margin: 0 1.5em 1.5em 0;
	}

	.alignright {
		/* This is also styled on a global level */
		margin: 0 0 1.5em 1.5em;
	}

	img.wp-smiley {
		border: none;
		margin-bottom: 0;
		margin-top: 0;
		padding: 0;
	}

	ul{
		list-style-type: square;
	}

	ol{
		list-style-type: decimal;
	}

	ol ol{
		list-style-type: upper-alpha;
	}

	ol ol ol{
		list-style-type: lower-roman;
	}

	ul li,
	ol li{
		margin-left: 1.5em;
	}

	dl dt{
		margin-bottom: 5px;
		font-weight: bold;
	}

	dl dd{
		margin-bottom: 10px;
		padding-left: 20px;
	}

	h1,h2,h3,h4,h5,h6{
		color: #444444;
		margin: 1em 0;
		font-weight: 500;
	}

	h1 {
		font-size: 1.7em;
	}

	h2 {
		font-size: 1.6em;
	}

	h3 {
		font-size: 1.5em;
	}

	h4 {
		font-size: 1.4em;
	}

	h5 {
		font-size: 1.2em;
	}

	h6 {
		font-size: 1.1em;
	}

	embed,
	iframe,
	object {
		max-width: 100%;
	}

	.tags {
		color: #999999;

		strong {
			color: #666666;
		}

		a {
			color: #999999;
			text-decoration: none;
		}
	}

}

/* =Navigation
----------------------------------------------- */

.pagination, .entry-content .pagination {
	position:relative;
	font-size:11px;
	line-height:13px;
	text-align: right;

	span, a {
		.rounded(2px);
		display:inline-block;
		margin: 2px 2px 2px 0;
		padding:6px 9px 5px 9px;
		text-decoration:none;
		width:auto;
		background: #4f5355;

		.bordered(#d2d2d2, #c3c3c3, #9f9f9f, #c3c3c3);
		.gradient(#FFFFFF, #dfdfdf, #FFFFFF);
		.rounded(3px);
		font-weight: bold;
		color: #646464;

		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125), inset 0 1px 0 rgba(255, 255, 255, 0.5)");
		width: auto;
		text-decoration: none;

		&:last-child {
			margin-right: 0;
		}


	}

	a:hover {
		.gradient(#F0F0F0, #D0D0D0, #F0F0F0);
		color: #606060;
	}

	.current {
		.bordered(#222222, #222222, #222222, #222222);
		.gradient(#333333, #505050, #333333);
		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125), inset 0 0 5px rgba(0,0,0, 0.5)");
		color: #EFEFEF;
	}
}

.site-content {

	.nav-previous, .nav-next {
		white-space: nowrap;
	}

	.nav-previous {
		float: left;
		width: 50%;
	}

	.nav-next {
		float: right;
		text-align: right;
		width: 50%;
	}

}

@media (max-width:480px) {
	body.responsive {
		.site-content{
			.nav-previous, .nav-next {
				float: none;
				width: 100%;
				margin-bottom: 20px;
				text-align: center;
			}
		}
	}
}

/* =Comments
----------------------------------------------- */

#comments-title, #reply-title {
	display: inline-block;
	font-size: 14px;
	margin-bottom: 20px;
	font-weight: 500;
	line-height: 1em;
	color: #444444;
	padding-bottom: 5px;
	border-bottom: 2px solid #555555;

	[class^="icon-"] {
		font-size: 16px;
		display: inline-block;
		margin-right: 4px;
		line-height: 0.75em;
	}
}
/* ... */

